# pure_pursuit_controller

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~  änderungen.txt
include/interpolation/: bezier.hpp
include/pure_pursuit_controller/: pure_pursuit_controller.hpp
src/: bezier.cpp  main.cpp  pure_pursuit.cpp  pure_pursuit.cpp~  pure_pursuit_controller.cpp  pure_pursuit_controller_node.cpp  pure_pursuit_header.cpp  pure_pursuit_header.hpp
